# plugin-sdk-cpp

./: .gitignore  CMakeLists.txt  Makefile  OWNERS  README.md  release.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml  clang-format-check.yaml  release.yaml
examples/async/: plugin.cpp
examples/extract/: plugin.cpp
examples/full/: Makefile
examples/full/src/: api.cpp  full.cpp  full.h
examples/parse/: plugin.cpp
examples/plugin_extract/: Makefile  plugin.cpp
examples/plugin_source/: plugin.cpp
examples/syscall_async/: Makefile  my_plugin_rules.yaml  plugin.cpp
examples/syscall_extract/: plugin.cpp
examples/syscall_parse/: Makefile  plugin.cpp
examples/syscall_subtables/: Makefile  plugin.cpp
include/: falcosecurity_plugin.h
include/falcosecurity/: async_event_handler.h  base_table.h  error.h  event_reader.h  event_writer.h  exception.h  extract_request.h  inputs.h  plugin_table.h  sdk.h  table.h  types.h
include/falcosecurity/api/: event_sourcing.h  field_extraction.h
include/falcosecurity/api/internal/: plugin.h
include/falcosecurity/events/: codec.h  decoders.h  encoders.h  types.h
include/falcosecurity/internal/: conversions.h  deps.h  event_sourcer.h  factory.h  field_extractor.h  hacks.h  internal.h  plugin.h  plugin_mixin.h  plugin_mixin_async.h  plugin_mixin_capture_listening.h  plugin_mixin_common.h  plugin_mixin_extraction.h  plugin_mixin_parsing.h  plugin_mixin_sourcing.h  symbols_async.h  symbols_capture_listening.h  symbols_common.h  symbols_extraction.h  symbols_parsing.h  symbols_sourcing.h
tests/: CMakeLists.txt  codec_test.cpp
